# pico-donk

./: Cargo.toml  README.md  out.rs
.cargo/: config.toml
pico-donk-core/: Cargo.toml  build.rs
pico-donk-core/src/: cst.rs  device.rs  envelope.rs  helpers.rs  lib.rs  libm.rs
pico-donk-core/src/synth/: falcon.rs  mod.rs
pico-donk-pc/: Cargo.toml
pico-donk-pc/src/: main.rs
pico-donk-proc-macro/: Cargo.toml
pico-donk-proc-macro/src/: device.rs  lib.rs  synth_device.rs
pico-donk-rp2040/: Cargo.toml
pico-donk-rp2040/src/: main.rs
src/: cw_amen08_165.raw  main.rs
