[package]
authors = ["Molive <moliveofscratch@gmail.com>"]
name = "pico-donk-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "2.0.0-alpha.2"
pico-donk-proc-macro = { path = "../pico-donk-proc-macro" }
