[package]
authors = ["Molive <moliveofscratch@gmail.com>"]
edition = "2021"
name = "pico-donk-rp2040"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"

defmt = "0.2.0"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }

rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", branch = "main", features = [
    "rt",
] }
rp2040-boot2 = { git = "https://github.com/rp-rs/rp2040-boot2-rs", branch = "main" }

pico-donk-core = { path = "../pico-donk-core" }

[features]
default = ["defmt-default"]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
